fix aos.js on mobile spacing by using overflow-x hidden on mobile media query

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -485,6 +485,10 @@ footer p {
 }
 
 @media only screen and (max-width: 768px) {
+
+    body {
+        overflow-x: hidden;
+    }
     
     #hamButton {
         display: block;
